tests/mm0_mmu/fail/bad-sort243.mm0
-- bad modifier order
strict free provable sort s243;